# encoders2mopidy

./: Cargo.toml  README.md  deploy
.cargo/: config
automation/systemd/service-template/: encoders2mopidy.service
src/: main.rs
