[package]
name = "encoders2mopidy"
version = "0.1.0"
authors = ["jhawkesworth <jhawkesworth@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
serde = { version="1.0.120", features = ["derive"] }
serde_json = "1.0.61"
ureq = { version = "2.0.1", default-features = false, features = ["json"] }